metamodel/src/java/aorta/kr/language/parser/MetamodelParser.java
// Generated from C:\Dropbox\code\phd\aorta\metamodel\src\java\aorta\kr\language\parser\MetamodelParser.g4 by ANTLR 4.1
package aorta.kr.language.parser;

	import alice.tuprolog.Number;
	import alice.tuprolog.Struct;
	import alice.tuprolog.Prolog;
	import alice.tuprolog.Term;
	import alice.tuprolog.Theory;
	import alice.tuprolog.Var;

	import aorta.kr.language.model.*;
	
	import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MetamodelParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		END_BRACKET=2, LT=16, CLOSESTRING=29, NUMBER=20, STRLIT=30, SEMICOLON=10, 
		ATOM=19, MATH_OP=22, COLON=9, START_BRACKET=1, ROLES=3, WS=28, COMMA=15, 
		OBJECTIVES=4, IS=18, ENTAILS=8, OBLIGATIONS=6, FULLSTOP=11, DEPENDENCIES=5, 
		START=13, GT=17, PIPE=12, VAR=21, OPENSTRING=25, COMMENT=27, END=14, BINARY_OP=23, 
		STRING=26, RULES=7, UNARY_OP=24;
	public static final String[] tokenNames = {
		"<INVALID>", "'['", "']'", "'ROLES'", "'OBJECTIVES'", "'DEPENDENCIES'", 
		"'OBLIGATIONS'", "'RULES'", "':-'", "':'", "';'", "'.'", "'|'", "'('", 
		"')'", "','", "'<'", "GT", "' is '", "ATOM", "NUMBER", "VAR", "MATH_OP", 
		"BINARY_OP", "'\\+'", "OPENSTRING", "STRING", "COMMENT", "WS", "CLOSESTRING", 
		"STRLIT"
	};
	public static final int
		RULE_metamodel = 0, RULE_roles = 1, RULE_role = 2, RULE_objectiveList = 3, 
		RULE_objectives = 4, RULE_objective = 5, RULE_dependencies = 6, RULE_dependency = 7, 
		RULE_obligations = 8, RULE_obligation = 9, RULE_rules = 10, RULE_krrule = 11, 
		RULE_prolog = 12, RULE_prolog2 = 13, RULE_termBuilder = 14, RULE_term = 15, 
		RULE_string = 16, RULE_atom = 17, RULE_number = 18, RULE_var = 19, RULE_struct = 20, 
		RULE_args = 21, RULE_list = 22, RULE_listContents = 23, RULE_listItem = 24;
	public static final String[] ruleNames = {
		"metamodel", "roles", "role", "objectiveList", "objectives", "objective", 
		"dependencies", "dependency", "obligations", "obligation", "rules", "krrule", 
		"prolog", "prolog2", "termBuilder", "term", "string", "atom", "number", 
		"var", "struct", "args", "list", "listContents", "listItem"
	};

	@Override
	public String getGrammarFileName() { return "MetamodelParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public MetamodelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MetamodelContext extends ParserRuleContext {
		public Metamodel mm;
		public RolesContext roles;
		public ObjectivesContext objectives;
		public DependenciesContext dependencies;
		public ObligationsContext obligations;
		public RulesContext rules;
		public DependenciesContext dependencies() {
			return getRuleContext(DependenciesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MetamodelParser.EOF, 0); }
		public RolesContext roles() {
			return getRuleContext(RolesContext.class,0);
		}
		public ObligationsContext obligations() {
			return getRuleContext(ObligationsContext.class,0);
		}
		public ObjectivesContext objectives() {
			return getRuleContext(ObjectivesContext.class,0);
		}
		public RulesContext rules() {
			return getRuleContext(RulesContext.class,0);
		}
		public MetamodelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metamodel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetamodelParserListener ) ((MetamodelParserListener)listener).enterMetamodel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetamodelParserListener ) ((MetamodelParserListener)listener).exitMetamodel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetamodelParserVisitor ) return ((MetamodelParserVisitor<? extends T>)visitor).visitMetamodel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MetamodelContext metamodel() throws RecognitionException {
		MetamodelContext _localctx = new MetamodelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_metamodel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

				   List<Dependency> dependencyList = new ArrayList<>();
				   List<Obligation> obligationList = new ArrayList<>();
				   List<Rule> ruleList = new ArrayList<>();
				  
			setState(51); ((MetamodelContext)_localctx).roles = roles();
			setState(52); ((MetamodelContext)_localctx).objectives = objectives();
			setState(56);
			_la = _input.LA(1);
			if (_la==DEPENDENCIES) {
				{
				setState(53); ((MetamodelContext)_localctx).dependencies = dependencies();
				 dependencyList = ((MetamodelContext)_localctx).dependencies.dependencyList; 
				}
			}

			setState(61);
			_la = _input.LA(1);
			if (_la==OBLIGATIONS) {
				{
				setState(58); ((MetamodelContext)_localctx).obligations = obligations();
				 obligationList = ((MetamodelContext)_localctx).obligations.obligationList; 
				}
			}

			setState(66);
			_la = _input.LA(1);
			if (_la==RULES) {
				{
				setState(63); ((MetamodelContext)_localctx).rules = rules();
				 ruleList = ((MetamodelContext)_localctx).rules.ruleList; 
				}
			}

			setState(68); match(EOF);

				((MetamodelContext)_localctx).mm =  new Metamodel(((MetamodelContext)_localctx).roles.roleList, ((MetamodelContext)_localctx).objectives.objList, dependencyList, obligationList, ruleList); 
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RolesContext extends ParserRuleContext {
		public List<Role> roleList;
		public RoleContext role;
		public List<RoleContext> role() {
			return getRuleContexts(RoleContext.class);
		}
		public RoleContext role(int i) {
			return getRuleContext(RoleContext.class,i);
		}
		public TerminalNode ROLES() { return getToken(MetamodelParser.ROLES, 0); }
		public TerminalNode COLON() { return getToken(MetamodelParser.COLON, 0); }
		public RolesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_roles; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetamodelParserListener ) ((MetamodelParserListener)listener).enterRoles(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetamodelParserListener ) ((MetamodelParserListener)listener).exitRoles(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetamodelParserVisitor ) return ((MetamodelParserVisitor<? extends T>)visitor).visitRoles(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RolesContext roles() throws RecognitionException {
		RolesContext _localctx = new RolesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_roles);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((RolesContext)_localctx).roleList =  new ArrayList<>(); 
			setState(72); match(ROLES);
			setState(73); match(COLON);
			setState(77); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(74); ((RolesContext)_localctx).role = role();
				 _localctx.roleList.add(((RolesContext)_localctx).role.r); 
				}
				}
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ATOM );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RoleContext extends ParserRuleContext {
		public Role r;
		public Token name;
		public ObjectiveListContext objectiveList;
		public TerminalNode FULLSTOP() { return getToken(MetamodelParser.FULLSTOP, 0); }
		public TerminalNode ATOM() { return getToken(MetamodelParser.ATOM, 0); }
		public TerminalNode COLON() { return getToken(MetamodelParser.COLON, 0); }
		public ObjectiveListContext objectiveList() {
			return getRuleContext(ObjectiveListContext.class,0);
		}
		public RoleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_role; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetamodelParserListener ) ((MetamodelParserListener)listener).enterRole(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetamodelParserListener ) ((MetamodelParserListener)listener).exitRole(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetamodelParserVisitor ) return ((MetamodelParserVisitor<? extends T>)visitor).visitRole(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RoleContext role() throws RecognitionException {
		RoleContext _localctx = new RoleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_role);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81); ((RoleContext)_localctx).name = match(ATOM);
			setState(82); match(COLON);
			setState(83); ((RoleContext)_localctx).objectiveList = objectiveList();
			setState(84); match(FULLSTOP);
			 ((RoleContext)_localctx).r =  new Role((((RoleContext)_localctx).name!=null?((RoleContext)_localctx).name.getText():null), ((RoleContext)_localctx).objectiveList.terms); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectiveListContext extends ParserRuleContext {
		public List<Term> terms;
		public TermContext term;
		public ObjectiveListContext ol;
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(MetamodelParser.SEMICOLON, 0); }
		public ObjectiveListContext objectiveList() {
			return getRuleContext(ObjectiveListContext.class,0);
		}
		public ObjectiveListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectiveList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetamodelParserListener ) ((MetamodelParserListener)listener).enterObjectiveList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetamodelParserListener ) ((MetamodelParserListener)listener).exitObjectiveList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetamodelParserVisitor ) return ((MetamodelParserVisitor<? extends T>)visitor).visitObjectiveList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectiveListContext objectiveList() throws RecognitionException {
		ObjectiveListContext _localctx = new ObjectiveListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_objectiveList);
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((ObjectiveListContext)_localctx).terms =  new ArrayList<>(); 
			setState(96);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(88); ((ObjectiveListContext)_localctx).term = term();
				 _localctx.terms.add(((ObjectiveListContext)_localctx).term.fml); 
				}
				break;

			case 2:
				{
				setState(91); ((ObjectiveListContext)_localctx).term = term();
				setState(92); match(SEMICOLON);
				setState(93); ((ObjectiveListContext)_localctx).ol = objectiveList();
				 _localctx.terms.add(((ObjectiveListContext)_localctx).term.fml); _localctx.terms.addAll(((ObjectiveListContext)_localctx).ol.terms); 
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectivesContext extends ParserRuleContext {
		public List<Objective> objList;
		public ObjectiveContext objective;
		public ObjectiveContext objective(int i) {
			return getRuleContext(ObjectiveContext.class,i);
		}
		public TerminalNode COLON() { return getToken(MetamodelParser.COLON, 0); }
		public TerminalNode OBJECTIVES() { return getToken(MetamodelParser.OBJECTIVES, 0); }
		public List<ObjectiveContext> objective() {
			return getRuleContexts(ObjectiveContext.class);
		}
		public ObjectivesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectives; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetamodelParserListener ) ((MetamodelParserListener)listener).enterObjectives(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetamodelParserListener ) ((MetamodelParserListener)listener).exitObjectives(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetamodelParserVisitor ) return ((MetamodelParserVisitor<? extends T>)visitor).visitObjectives(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectivesContext objectives() throws RecognitionException {
		ObjectivesContext _localctx = new ObjectivesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_objectives);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((ObjectivesContext)_localctx).objList =  new ArrayList<>(); 
			setState(99); match(OBJECTIVES);
			setState(100); match(COLON);
			setState(104); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(101); ((ObjectivesContext)_localctx).objective = objective();
				 _localctx.objList.add(((ObjectivesContext)_localctx).objective.o); 
				}
				}
				setState(106); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << START_BRACKET) | (1L << COLON) | (1L << SEMICOLON) | (1L << FULLSTOP) | (1L << START) | (1L << COMMA) | (1L << ATOM) | (1L << NUMBER) | (1L << VAR) | (1L << UNARY_OP) | (1L << OPENSTRING))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectiveContext extends ParserRuleContext {
		public Objective o;
		public PrologContext prolog;
		public ObjectiveListContext objectiveList;
		public PrologContext prolog() {
			return getRuleContext(PrologContext.class,0);
		}
		public TerminalNode FULLSTOP() { return getToken(MetamodelParser.FULLSTOP, 0); }
		public TerminalNode COLON() { return getToken(MetamodelParser.COLON, 0); }
		public ObjectiveListContext objectiveList() {
			return getRuleContext(ObjectiveListContext.class,0);
		}
		public ObjectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objective; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetamodelParserListener ) ((MetamodelParserListener)listener).enterObjective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetamodelParserListener ) ((MetamodelParserListener)listener).exitObjective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetamodelParserVisitor ) return ((MetamodelParserVisitor<? extends T>)visitor).visitObjective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectiveContext objective() throws RecognitionException {
		ObjectiveContext _localctx = new ObjectiveContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_objective);
		try {
			setState(118);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(108); ((ObjectiveContext)_localctx).prolog = prolog();
				setState(109); match(FULLSTOP);
				 ((ObjectiveContext)_localctx).o =  new Objective(((ObjectiveContext)_localctx).prolog.fml); 
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(112); ((ObjectiveContext)_localctx).prolog = prolog();
				setState(113); match(COLON);
				setState(114); ((ObjectiveContext)_localctx).objectiveList = objectiveList();
				setState(115); match(FULLSTOP);
				 ((ObjectiveContext)_localctx).o =  new Objective(((ObjectiveContext)_localctx).prolog.fml, ((ObjectiveContext)_localctx).objectiveList.terms); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DependenciesContext extends ParserRuleContext {
		public List<Dependency> dependencyList;
		public DependencyContext dependency;
		public List<DependencyContext> dependency() {
			return getRuleContexts(DependencyContext.class);
		}
		public TerminalNode DEPENDENCIES() { return getToken(MetamodelParser.DEPENDENCIES, 0); }
		public TerminalNode COLON() { return getToken(MetamodelParser.COLON, 0); }
		public DependencyContext dependency(int i) {
			return getRuleContext(DependencyContext.class,i);
		}
		public DependenciesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dependencies; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetamodelParserListener ) ((MetamodelParserListener)listener).enterDependencies(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetamodelParserListener ) ((MetamodelParserListener)listener).exitDependencies(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetamodelParserVisitor ) return ((MetamodelParserVisitor<? extends T>)visitor).visitDependencies(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DependenciesContext dependencies() throws RecognitionException {
		DependenciesContext _localctx = new DependenciesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_dependencies);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((DependenciesContext)_localctx).dependencyList =  new ArrayList<>(); 
			setState(121); match(DEPENDENCIES);
			setState(122); match(COLON);
			setState(126); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(123); ((DependenciesContext)_localctx).dependency = dependency();
				 _localctx.dependencyList.add(((DependenciesContext)_localctx).dependency.d); 
				}
				}
				setState(128); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ATOM );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DependencyContext extends ParserRuleContext {
		public Dependency d;
		public Token dependee;
		public Token dependant;
		public PrologContext prolog;
		public TerminalNode ATOM(int i) {
			return getToken(MetamodelParser.ATOM, i);
		}
		public PrologContext prolog() {
			return getRuleContext(PrologContext.class,0);
		}
		public TerminalNode FULLSTOP() { return getToken(MetamodelParser.FULLSTOP, 0); }
		public List<TerminalNode> ATOM() { return getTokens(MetamodelParser.ATOM); }
		public TerminalNode GT() { return getToken(MetamodelParser.GT, 0); }
		public TerminalNode COLON() { return getToken(MetamodelParser.COLON, 0); }
		public DependencyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dependency; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetamodelParserListener ) ((MetamodelParserListener)listener).enterDependency(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetamodelParserListener ) ((MetamodelParserListener)listener).exitDependency(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetamodelParserVisitor ) return ((MetamodelParserVisitor<? extends T>)visitor).visitDependency(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DependencyContext dependency() throws RecognitionException {
		DependencyContext _localctx = new DependencyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dependency);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130); ((DependencyContext)_localctx).dependee = match(ATOM);
			setState(131); match(GT);
			setState(132); ((DependencyContext)_localctx).dependant = match(ATOM);
			setState(133); match(COLON);
			setState(134); ((DependencyContext)_localctx).prolog = prolog();
			setState(135); match(FULLSTOP);
			 ((DependencyContext)_localctx).d =  new Dependency((((DependencyContext)_localctx).dependee!=null?((DependencyContext)_localctx).dependee.getText():null), (((DependencyContext)_localctx).dependant!=null?((DependencyContext)_localctx).dependant.getText():null), ((DependencyContext)_localctx).prolog.fml); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObligationsContext extends ParserRuleContext {
		public List<Obligation> obligationList;
		public ObligationContext obligation;
		public ObligationContext obligation(int i) {
			return getRuleContext(ObligationContext.class,i);
		}
		public List<ObligationContext> obligation() {
			return getRuleContexts(ObligationContext.class);
		}
		public TerminalNode COLON() { return getToken(MetamodelParser.COLON, 0); }
		public TerminalNode OBLIGATIONS() { return getToken(MetamodelParser.OBLIGATIONS, 0); }
		public ObligationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_obligations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetamodelParserListener ) ((MetamodelParserListener)listener).enterObligations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetamodelParserListener ) ((MetamodelParserListener)listener).exitObligations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetamodelParserVisitor ) return ((MetamodelParserVisitor<? extends T>)visitor).visitObligations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObligationsContext obligations() throws RecognitionException {
		ObligationsContext _localctx = new ObligationsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_obligations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((ObligationsContext)_localctx).obligationList =  new ArrayList<>(); 
			setState(139); match(OBLIGATIONS);
			setState(140); match(COLON);
			setState(144); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(141); ((ObligationsContext)_localctx).obligation = obligation();
				 _localctx.obligationList.add(((ObligationsContext)_localctx).obligation.o); 
				}
				}
				setState(146); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ATOM );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObligationContext extends ParserRuleContext {
		public Obligation o;
		public Token roleName;
		public PrologContext obj;
		public PrologContext deadline;
		public PrologContext cond;
		public TerminalNode PIPE() { return getToken(MetamodelParser.PIPE, 0); }
		public List<PrologContext> prolog() {
			return getRuleContexts(PrologContext.class);
		}
		public TerminalNode LT() { return getToken(MetamodelParser.LT, 0); }
		public TerminalNode FULLSTOP() { return getToken(MetamodelParser.FULLSTOP, 0); }
		public TerminalNode ATOM() { return getToken(MetamodelParser.ATOM, 0); }
		public PrologContext prolog(int i) {
			return getRuleContext(PrologContext.class,i);
		}
		public TerminalNode COLON() { return getToken(MetamodelParser.COLON, 0); }
		public ObligationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_obligation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetamodelParserListener ) ((MetamodelParserListener)listener).enterObligation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetamodelParserListener ) ((MetamodelParserListener)listener).exitObligation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetamodelParserVisitor ) return ((MetamodelParserVisitor<? extends T>)visitor).visitObligation(this);
			else return visitor.visitChildren(this);
		}
	}
